...

extension InterfaceController: WorkoutManagerDelegate, WCSessionDelegate {
    func session(_ session: WCSession, activationDidCompleteWith activationState: WCSessionActivationState, error: Error?) {}
    
    func session(_ session: WCSession, didReceiveMessage message: [String : Any]) {
        print("received data: \(message)")
        if (message["START"] as? String) != nil {
            bpmLabel.setHidden(false)
            textLabel.setHidden(true)
            workoutManager.start()
        }else if (message["STOP"] as? String) != nil{
            heartRateLabel.setText("--")
            textLabel.setHidden(false)
            bpmLabel.setHidden(true)
            workoutManager.stop()
        }else{
            /*
...
