...
        btnRestart.leftAnchor.constraint(equalTo: view.leftAnchor, constant: 0).isActive = true
        btnRestart.heightAnchor.constraint(equalToConstant: 80).isActive = true
        btnRestart.rightAnchor.constraint(equalTo: view.centerXAnchor, constant: 0).isActive = true
        btnRestart.bottomAnchor.constraint(equalTo: view.bottomAnchor, constant: 0).isActive = true
        btnRestart.addTarget(self, action: #selector(goBack), for: .touchUpInside)
        
        let btnContinue = createButton(color: UIColor.btnContinue, text: "SHARE")
        view.addSubview(btnContinue)
        btnContinue.rightAnchor.constraint(equalTo: view.rightAnchor, constant: 0).isActive = true
        btnContinue.heightAnchor.constraint(equalToConstant: 80).isActive = true
        btnContinue.leftAnchor.constraint(equalTo: view.centerXAnchor, constant: 0).isActive = true
        btnContinue.bottomAnchor.constraint(equalTo: view.bottomAnchor, constant: 0).isActive = true
        btnContinue.addTarget(self, action: #selector(share), for: .touchUpInside)
...
